Closed
Bug 801784
Opened 13 years ago
Closed 13 years ago
Animated images stop playing when mousing over a context menu
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
mozilla19
People
(Reporter: jdm, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(1 file)
1.33 KB,
patch
|
roc
:
review+
bajaj
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
STR:
1. http://forgifs.com/gallery/v/Weather-forecast-growing-innuendo.gif.html
2. open a context menu anywhere
3. mouse over it
Expected:
No change.
Actual:
Image stops animating as long as the menu remains open.
I don't think this is a regression from bug 505385, since I'm seeing this in a build from Oct 12.
Comment 1•13 years ago
|
||
Last good nightly: 2012-09-28
First bad nightly: 2012-09-29
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=895f66c4eada&tochan
ge=c09a0c022b2e
Comment 3•13 years ago
|
||
![]() |
||
Updated•13 years ago
|
Blocks: dlbi
Keywords: regression
from bug 802100
On Win7 x64, under certain circumstances, this bug completely messes up all gif animations on all webpages until a browser restart. All gifs stutter/hang/lag. This usually happens after a few minutes of browser uptime. Only a browser restart fixes this until the bug strikes again.
Assignee | ||
Comment 5•13 years ago
|
||
When we got an invalidation inside a popup, we were setting the 'has invalid children' flag all the way up to the page root, but only setting the 'cant do an empty transaction' flag on the popup display root.
Invalidations inside the main window would then walk up till they found the 'has invalid children' flag and bail out, also not setting the 'cant do empty transaction' flag.
When painting, we'd do an empty transaction for the main window (and full paint of the popup) and not draw the changed gif, nor clear the invalidation state bits.
Attachment #672011 -
Flags: review?(roc)
Attachment #672011 -
Flags: review?(roc) → review+
Assignee | ||
Comment 6•13 years ago
|
||
Assignee: nobody → matt.woodrow
Comment 7•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Updated•13 years ago
|
status-firefox18:
--- → affected
status-firefox19:
--- → affected
![]() |
||
Updated•13 years ago
|
![]() |
||
Comment 8•13 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #6)
> https://hg.mozilla.org/integration/mozilla-inbound/rev/6e111238c65e
Ready for uplift Matt?
Assignee | ||
Comment 9•13 years ago
|
||
Comment on attachment 672011 [details] [diff] [review]
Only invalidate up to the display root
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 539356
User impact if declined: Broken popup rendering
Testing completed (on m-c, etc.): Been on m-c for a few weeks without issue.
Risk to taking this patch (and alternatives if risky): Low risk, no alternative exists.
String or UUID changes made by this patch: None
Attachment #672011 -
Flags: approval-mozilla-aurora?
Comment 10•13 years ago
|
||
Comment on attachment 672011 [details] [diff] [review]
Only invalidate up to the display root
Approving the low risk fix needed on FF18
Attachment #672011 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 11•13 years ago
|
||
Updated•13 years ago
|
![]() |
||
Comment 12•13 years ago
|
||
I could reproduce this issue on Nightly Mozilla/5.0 (X11; Linux i686; rv:19.0) Gecko/19.0 Firefox/19.0 (20121015030612).
On FF18 beta 2 it works as expected. Mozilla/5.0 (X11; Linux i686; rv:18.0) Gecko/20100101 Firefox/18.0 (20121128060531).
Please someone with permission set flag for FF18 as verified.
![]() |
||
Updated•13 years ago
|
![]() |
||
Comment 13•13 years ago
|
||
Not able to reproduce following STR from Comment 0 on FF 19b2 Ubuntu x86.
Mozilla/5.0 (X11; Linux i686; rv:19.0) Gecko/20100101 Firefox/19.0(20130116072953)
Based on this i consider this issue Verified Fixed on FF 19 too.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•