Bug 801784 - Only add invalidate children state flags up to the nearest display root. r=roc